--- a/Lab 2.2.ipynb
+++ b/Lab 2.2.ipynb
@@ -391,12 +391,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "819a9c5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most Sold Product: Product A\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "most_sold_product = #your code here\n",
+    "# Create a dictionary to store the total quantity sold for each product\n",
+    "product_quantity_sold = {}\n",
+    "for sale in sales_data:\n",
+    "    product = sale[\"product\"]\n",
+    "    quantity = sale[\"quantity\"]\n",
+    "\n",
+    "    if product not in product_quantity_sold:\n",
+    "        product_quantity_sold[product] = 0\n",
+    "\n",
+    "    product_quantity_sold[product] += quantity\n",
+    "\n",
+    "# Find the product with the highest total quantity sold\n",
+    "most_sold_product = max(product_quantity_sold, key=product_quantity_sold.get)\n",
     "\n",
     "print(\"Most Sold Product:\", most_sold_product)\n",
     "print()"
@@ -412,12 +433,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "54efb379",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Revenue per Product:\n",
+      "{'Product A': 240.0, 'Product B': 180.0, 'Product C': 85.0}\n"
+     ]
+    }
+   ],
    "source": [
-    "total_revenue_per_product = {#your code here}\n",
+    "# Create a dictionary to store the total revenue for each product\n",
+    "total_revenue_per_product = {}\n",
+    "for sale in sales_data:\n",
+    "    product = sale[\"product\"]\n",
+    "    revenue = sale[\"revenue\"]\n",
+    "\n",
+    "    if product not in total_revenue_per_product:\n",
+    "        total_revenue_per_product[product] = 0\n",
+    "\n",
+    "    total_revenue_per_product[product] += revenue\n",
     "\n",
     "print(\"Total Revenue per Product:\")\n",
     "print(total_revenue_per_product)"
