--- a/Lab 2.2.ipynb
+++ b/Lab 2.2.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "id": "a0e46471",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
      "output_type": "stream",
      "text": [
       "Date with Highest Total Revenue: 2023-01-01\n",
-      "Date with Lowest Total Revenue: 2023-01-01\n",
+      "Date with Lowest Total Revenue: 2023-01-05\n",
       "\n"
      ]
     }
@@ -299,6 +299,8 @@
    "source": [
     "max_revenue_date = sales_data[0]['date']\n",
     "min_revenue_date = sales_data[0]['date']\n",
+    "max_revenue = 0\n",
+    "min_revenue = sales_data[0]['revenue']\n",
     "\n",
     "for sale in sales_data:\n",
     "    if sale['revenue'] > max_revenue:\n",
