--- a/Lab 2.2.ipynb
+++ b/Lab 2.2.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "id": "a0e46471",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
    "source": [
     "max_revenue_date = sales_data[0]['date']\n",
     "min_revenue_date = sales_data[0]['date']\n",
-    "max_revenue = 0\n",
+    "max_revenue = sales_data[0]['revenue']\n",
     "min_revenue = sales_data[0]['revenue']\n",
     "\n",
     "for sale in sales_data:\n",
